--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".mainHall"></activity>
+        <activity android:name=".mainHall">
+
+        </activity>
         <activity android:name=".ClassIntroActivity"></activity>
         <activity android:name=".incomecal"></activity>
-        <activity android:name=".ClassManagement"></activity>
+        <activity android:name=".ClassManagement">
+
+        </activity>
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
