--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,18 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
         <activity
-            android:name=".TeacherManagement"
-            android:exported="true" />
-        <activity android:name=".ClassIntroActivity"></activity>
-        <activity android:name=".incomecal"></activity>
-        <activity android:name=".ClassManagement"></activity>
-        <activity android:name=".MainActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            android:name=".login_page"
+            android:exported="true" >
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
         </activity>
+        <activity
+            android:name=".TeacherManagement"
+            android:exported="true">
+
+        </activity>
+        <activity android:name=".ClassIntroActivity" />
+        <activity android:name=".incomecal" />
+        <activity android:name=".ClassManagement" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
