--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
         <activity
-            android:name=".Registration_page"
+            android:name=".Add_Teacher"
             android:exported="true" >
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
@@ -19,13 +19,16 @@
         </intent-filter>
         </activity>
         <activity
-            android:name=".login_page"
+            android:name=".Registration_page"
             android:exported="true">
 
         </activity>
         <activity
-            android:name=".TeacherManagement"
+            android:name=".login_page"
             android:exported="true"></activity>
+        <activity
+            android:name=".TeacherManagement"
+            android:exported="true" />
         <activity android:name=".ClassIntroActivity" />
         <activity android:name=".incomecal" />
         <activity android:name=".ClassManagement" />
