--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".Student_Managment"></activity>
-        <activity android:name=".ClassIntroActivity"></activity>
-        <activity android:name=".incomecal"></activity>
-        <activity android:name=".ClassManagement"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".Hall_Add">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".Hall_Home">
+
+        </activity>
+        <activity android:name=".Student_Managment" />
+        <activity android:name=".ClassIntroActivity" />
+        <activity android:name=".incomecal" />
+        <activity android:name=".ClassManagement" />
+        <activity android:name=".MainActivity"></activity>
     </application>
 
 </manifest>
