--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
+        <activity android:name=".Hall_View_Hdata"></activity>
+        <activity android:name=".Hall_Gallery"></activity>
         <activity android:name=".Hall_Add">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -16,14 +18,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Hall_Home">
-
-        </activity>
+        <activity android:name=".Hall_Home" />
         <activity android:name=".Student_Managment" />
         <activity android:name=".ClassIntroActivity" />
         <activity android:name=".incomecal" />
         <activity android:name=".ClassManagement" />
-        <activity android:name=".MainActivity"></activity>
+        <activity android:name=".MainActivity" />
     </application>
 
 </manifest>
