--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".viewAndDeleteStudent"></activity>
+        <activity android:name=".aboutUs"></activity>
+        <activity android:name=".viewAndDeleteStudent" />
         <activity android:name=".deleteStudent" />
         <activity android:name=".addStudent" />
         <activity android:name=".Student_Managment" />
