--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,31 +9,24 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity
-            android:name=".updatetea"
-            android:exported="true" />
-        <activity
-            android:name=".view_teachers"
-            android:exported="true"></activity>
-        <activity
-            android:name=".Add_Teacher"
-            android:exported="true"></activity>
-        <activity
-            android:name=".Registration_page"
-            android:exported="true" />
-        <activity
-            android:name=".login_page"
-            android:exported="true" />
+        <activity android:name=".updatetea"></activity>
+        <activity android:name=".view_teachers" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+        </activity>
+        <activity android:name=".Add_Teacher" ></activity>
+        <activity android:name=".Registration_page" >
 
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+        </activity>
+        <activity android:name=".login_page">
 
-        <activity
-            android:name=".TeacherManagement"
-            android:exported="true"></activity>
+        </activity>
+        <activity android:name=".TeacherManagement">
+
+        </activity>
         <activity android:name=".ClassIntroActivity" />
         <activity android:name=".incomecal" />
         <activity android:name=".ClassManagement" />
