--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,26 +11,31 @@
         android:theme="@style/Theme.Madproject">
         <activity android:name=".view_schedule">
 
+
         </activity>
         <activity android:name=".updateschedule" >
 
 
 
+
         </activity>
-        <activity android:name=".ClassIntroActivity" ></activity>
+        <activity android:name=".ClassIntroActivity" >
+
+        </activity>
         <activity android:name=".incomecal" >
 
-        </activity>
-        <activity android:name=".ClassManagement">
-
-
-        </activity>
-        <activity android:name=".MainActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".ClassManagement">
+
+        </activity>
+        <activity android:name=".MainActivity" >
+
+
         </activity>
     </application>
 
