--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,19 +5,22 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="MadProject"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".aboutUs"></activity>
-        <activity android:name=".viewAndDeleteStudent" />
-        <activity android:name=".deleteStudent" />
+        <activity android:name=".navigationDrawer"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".aboutUs" />
         <activity android:name=".addStudent" />
-        <activity android:name=".Student_Managment" />
+        <activity android:name=".viewAndDeleteStudent" />
         <activity android:name=".ClassIntroActivity" />
         <activity android:name=".incomecal" />
         <activity android:name=".ClassManagement" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Student_Managment" />
+        <activity android:name=".TeacherManagement" />
+        <activity android:name=".mainHall" />
+        <activity android:name=".studentProfile">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
