--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,22 +23,23 @@
 
 
         </activity>
-        <activity android:name=".incomecal" >
+        <activity android:name=".incomecal" ></activity>
 
 
+
+        <activity android:name=".ClassManagement"></activity>
+
+        <activity android:name=".MainActivity">
+        <intent-filter>
+
+        <action android:name="android.intent.action.MAIN" />
+
+        <category android:name="android.intent.category.LAUNCHER" />
+
+
+        </intent-filter>
         </activity>
-        <activity android:name=".ClassManagement">
 
-
-        </activity>
-        <activity android:name=".MainActivity" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-
-        </activity>
     </application>
 
 </manifest>
