--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,10 +18,6 @@ android {
     }
 
 
-
-
-
-
     buildTypes {
         release {
             minifyEnabled false
@@ -41,10 +37,10 @@ dependencies {
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
 
-    testImplementation 'org.junit.jupiter:junit-jupiter:5.8.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-params:5.3.2"
-    testRuntimeOnly "org.junit.vintage:junit-vintage-engine:5.3."
+    //unit-testing
+    testImplementation 'junit:junit:4.12'
+    //form validation
+    implementation 'com.basgeekball:awesome-validation:4.3'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
