--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,46 +9,36 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".view_schedule">
-
-
-        </activity>
-        <activity android:name=".updateschedule" >
-
-
-
-
-        </activity>
-        <activity android:name=".ClassIntroActivity" >
-
-        </activity>
-        <activity android:name=".incomecal" ></activity>
-
-        <activity android:name=".Student_Managment"></activity>
-
-        <activity android:name=".ClassManagement"></activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".update_teacher">
-
-        </activity>
-        <activity android:name=".view_teachers" />
-
-        <activity android:name=".navigationDrawer"></activity>
-        <activity android:name=".aboutUs" />
-        <activity android:name=".addStudent" />
-        <activity android:name=".viewAndDeleteStudent" />
-        <activity android:name=".TeacherManagement" />
-
-        <activity android:name=".studentProfile">
+        <activity android:name=".Hall_Management_Home">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".Hall_Managment">
 
-            </activity>
-
-
+        </activity>
+        <activity android:name=".Gallery_Home" />
+        <activity android:name=".Welcome_Sign" />
+        <activity android:name=".EditHall" />
+        <activity android:name=".AddHall" />
+        <activity android:name=".MainActivityHallList"></activity>
+        <activity android:name=".view_schedule" />
+        <activity android:name=".updateschedule" />
+        <activity android:name=".ClassIntroActivity" />
+        <activity android:name=".incomecal" />
+        <activity android:name=".Student_Managment" />
+        <activity android:name=".ClassManagement" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".update_teacher" />
+        <activity android:name=".view_teachers" />
+        <activity android:name=".navigationDrawer" />
+        <activity android:name=".aboutUs" />
+        <activity android:name=".addStudent" />
+        <activity android:name=".viewAndDeleteStudent" />
+        <activity android:name=".TeacherManagement" />
+        <activity android:name=".studentProfile" />
     </application>
 
 </manifest>
