--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity android:name=".Hall_Management_Home">
+
+
+        <activity android:name=".Student_Managment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +29,7 @@
         </activity>
         <activity android:name=".incomecal" ></activity>
 
-        <activity android:name=".Student_Managment"></activity>
+        <activity android:name=".Hall_Management_Home"></activity>
 
         <activity android:name=".ClassManagement"></activity>
         <activity android:name=".MainActivity"/>
