--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-
-
+        <activity
+            android:name=".EditStudent"
+            android:label="@string/title_activity_edit_student"
+            android:theme="@style/Theme.Madproject.NoActionBar"></activity>
         <activity android:name=".Student_Managment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -20,59 +22,31 @@
         </activity>
         <activity
             android:name=".class_payements"
-            android:exported="true">
-
-        </activity>
-        <activity android:name=".Hall_Managment">
-
-
-        </activity>
-        <activity android:name=".incomecal" ></activity>
-
-        <activity android:name=".Hall_Management_Home"></activity>
-
-        <activity android:name=".ClassManagement"></activity>
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".update_teacher">
-
-
-
-        </activity>
+            android:exported="true"></activity>
+        <activity android:name=".Hall_Managment"></activity>
+        <activity android:name=".incomecal" />
+        <activity android:name=".Hall_Management_Home" />
+        <activity android:name=".ClassManagement" />
+        <activity android:name=".MainActivity" />
+        <activity android:name=".update_teacher"></activity>
         <activity android:name=".Gallery_Home" />
         <activity android:name=".Welcome_Sign" />
         <activity android:name=".EditHall" />
         <activity android:name=".AddHall" />
-        <activity android:name=".MainActivityHallList"></activity>
+        <activity android:name=".MainActivityHallList" />
         <activity android:name=".view_schedule" />
         <activity android:name=".updateschedule" />
         <activity android:name=".ClassIntroActivity" />
-
-
         <activity android:name=".view_teachers" />
         <activity android:name=".navigationDrawer" />
         <activity android:name=".aboutUs" />
         <activity android:name=".addStudent" />
-        <activity android:name=".viewAndDeleteStudent" />
+        <activity android:name=".viewStudent" />
         <activity android:name=".TeacherManagement" />
-
-
-
-
-
-
-
         <activity android:name=".studentProfile" />
-
         <activity android:name=".Registration_page" />
         <activity android:name=".login_page" />
         <activity android:name=".Add_Teacher" />
-
-
-
-
-
-
-
     </application>
 
 </manifest>
