--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-        <activity
-            android:name=".EditStudent"
-            android:label="@string/title_activity_edit_student"
-            android:theme="@style/Theme.Madproject.NoActionBar"></activity>
+
+        <activity android:name=".EditStudent" />
+
         <activity android:name=".Student_Managment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +22,8 @@
         <activity
             android:name=".class_payements"
             android:exported="true"></activity>
+
+
         <activity android:name=".Hall_Managment"></activity>
         <activity android:name=".incomecal" />
         <activity android:name=".Hall_Management_Home" />
