--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,17 +10,14 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
         <activity android:name=".Hall_Management_Home">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
 
         <activity
             android:name=".class_payements"
             android:exported="true">
+
 
         </activity>
         <activity android:name=".Hall_Managment">
@@ -29,7 +26,9 @@
         </activity>
         <activity android:name=".incomecal" ></activity>
 
-        <activity android:name=".Student_Managment"></activity>
+        <activity android:name=".Student_Managment">
+
+        </activity>
 
         <activity android:name=".ClassManagement"></activity>
         <activity android:name=".MainActivity"/>
@@ -51,7 +50,17 @@
         <activity android:name=".view_teachers" />
         <activity android:name=".navigationDrawer" />
         <activity android:name=".aboutUs" />
-        <activity android:name=".addStudent" />
+        <activity android:name=".addStudent" >
+
+
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
         <activity android:name=".viewAndDeleteStudent" />
         <activity android:name=".TeacherManagement" />
 
@@ -64,7 +73,10 @@
         <activity android:name=".studentProfile" />
 
         <activity android:name=".Registration_page" />
-        <activity android:name=".login_page" />
+        <activity android:name=".login_page" >
+
+
+        </activity>
         <activity android:name=".Add_Teacher" />
 
 
