--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,11 +54,7 @@
 
 
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity android:name=".viewAndDeleteStudent" />
@@ -75,9 +71,18 @@
         <activity android:name=".Registration_page" />
         <activity android:name=".login_page" >
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
 
         </activity>
-        <activity android:name=".Add_Teacher" />
+        <activity android:name=".Add_Teacher" >
+
+
+        </activity>
 
 
 
