--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,7 +58,15 @@
         </activity>
 
         <activity android:name=".viewAndDeleteStudent" />
-        <activity android:name=".TeacherManagement" />
+        <activity android:name=".TeacherManagement" >
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+
 
 
 
@@ -71,11 +79,7 @@
         <activity android:name=".Registration_page" />
         <activity android:name=".login_page" >
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
 
 
         </activity>
