--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Madproject">
-
         <activity android:name=".EditStudent" />
-
         <activity android:name=".Student_Managment">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,15 +19,13 @@
         </activity>
         <activity
             android:name=".class_payements"
-            android:exported="true"></activity>
-
-
-        <activity android:name=".Hall_Managment"></activity>
+            android:exported="true" />
+        <activity android:name=".Hall_Managment" />
         <activity android:name=".incomecal" />
         <activity android:name=".Hall_Management_Home" />
         <activity android:name=".ClassManagement" />
         <activity android:name=".MainActivity" />
-        <activity android:name=".update_teacher"></activity>
+        <activity android:name=".update_teacher" />
         <activity android:name=".Gallery_Home" />
         <activity android:name=".Welcome_Sign" />
         <activity android:name=".EditHall" />
